--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<title>Document</title>
 </head>
 <body>
-	<script src="src/Character.js" type="module"></script>
-	<script src="src/Bowerman.js" type="module"></script>
-	<script src="src/Swordsman.js" type="module"></script>
-	<script src="src/Magician.js" type="module"></script>
-	<script src="src/Daemon.js" type="module"></script>
-	<script src="src/Undead.js" type="module"></script>
-	<script src="src/Zombie.js" type="module"></script>
-  	<script src="test/test.js" type="module"></script>
+	<script src="src/js/Character.js" type="module"></script>
+	<script src="src/js/Bowerman.js" type="module"></script>
+	<script src="src/js/Swordsman.js" type="module"></script>
+	<script src="src/js/Magician.js" type="module"></script>
+	<script src="src/js/Daemon.js" type="module"></script>
+	<script src="src/js/Undead.js" type="module"></script>
+	<script src="src/js/Zombie.js" type="module"></script>
+  	<script src="/test/test.js" type="module"></script>
 </body>
 </html>
